objects/PRIME_DRT_Layer_Association__c.object
<CustomObject>
    <fields>
        <fullName>Created_at_Oracle_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created at Oracle DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRT_Name__c</fullName>
        <formula>DRT__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRT_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRT_Status__c</fullName>
        <formula>TEXT(DRT__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRT Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRT__c</fullName>
        <description>DRT associated</description>
        <label>DRT</label>
        <referenceTo>DRT__c</referenceTo>
        <relationshipLabel>PRIME DRT Layer Associations</relationshipLabel>
        <relationshipName>PRIME_DRT_Layer_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Error_Message_Oracle_DB__c</fullName>
        <label>Error_Message_Oracle_DB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sync_with_Oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Sync with Oracle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSoftDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSoftDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Edited_Retrofit_Mask_Rev__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to indicate that Retrofit_Mask_Rev is edited by user or original value which was pull out from system.
- TRUE: was edited by user when Create/Update/Revise drt
- FALSE: default value which was pull out from system</description>
        <label>Is_Edited_Retrofit_Mask_Rev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Edited_Retrofit_ROM_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to indicate that Retrofit_ROM_Code is edited by user or original value which was pull out from system.
- TRUE: was edited by user when Create/Update/Revise drt
- FALSE: default value which was pull out from system</description>
        <label>Is_Edited_Retrofit_ROM_Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Request_Timestamp__c</fullName>
        <label>Last Sync Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mask_Layer_Name__c</fullName>
        <description>This field will contain the Mask Layer Name of the layer. Currently the Name field contains the layer Number.</description>
        <label>Mask Layer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <formula>CASESAFEID(DRT__r.Mask_Set_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mask Set Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrofit_Mask_Rev__c</fullName>
        <description>Retrofit Mask Revision</description>
        <label>Retrofit Mask Rev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrofit_ROM_Code__c</fullName>
        <label>Retrofit ROM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retrofit_Tech_Geo__c</fullName>
        <label>Retrofit Tech Geo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced_with_Oracle_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced with Oracle DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Oracle_DB_Sync_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger_Oracle_DB_Sync_Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCreatedLater__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether record is created during update of DRT or not</description>
        <inlineHelpText>Whether record is created during update of DRT or not</inlineHelpText>
        <label>isCreatedLater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate_sgt__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>lastmodifieddate_sgt</label>
        <type>DateTime</type>
    </fields>
    <label>PRIME DRT Layer Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Layer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRIME DRT Layer Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>